update panel
