# sub/models/article.py
@@ -51,6 +51,9 @@ class Article(Model):
     is_hidden = db.Column(
         db.Boolean(), nullable=False, index=True,
         server_default=sql.false())
+    date_published = db.Column(
+        DateTime, nullable=False, index=True,
+        server_default=db.func.current_timestamp())
     date_created = db.Column(
         db.DateTime(timezone=True), nullable=False, index=True,
         server_default=db.func.current_timestamp())
