# sub/panel/api/articles.py
@@ -15,18 +15,13 @@ class Articles(Resource):
     # @register_permission('get_articles')
     def get(self):
         filter_fields = ['id', 'column_id', 'article_id',
-                         'status', 'account_id', 'review_status']
+                         'status', 'account_id']
         query = get_slave_query(Article, filter_fields, g.args)
-        order_by = g.args.get('order_by', 'date_created')
         count = query.count()
 
         offset, limit = get_offset_limit(g.args)
-        order_dict = {
-            'date_created': Article.date_created.desc(),
-        }
-        order_by = order_dict.get(order_by)
         articles = (query
-                     .order_by(order_by)
+                     .order_by(Article.date_created.desc())
                      .offset(offset).limit(limit)
                      .all())
         return articles, 200, [('Total-Count', str(count))]
