# sub/panel/api/columns.py
@@ -13,18 +13,13 @@ class Columns(Resource):
 
     def get(self):
         filter_fields = ['id', 'name', 'column_id',
-                         'status', 'account_id', 'review_status']
+                         'status', 'account_id']
         query = get_slave_query(Column, filter_fields, g.args)
-        order_by = g.args.get('order_by', 'date_created')
         count = query.count()
 
         offset, limit = get_offset_limit(g.args)
-        order_dict = {
-            'date_created': Column.date_created.desc(),
-        }
-        order_by = order_dict.get(order_by)
         columns = (query
-                     .order_by(order_by)
+                     .order_by(Column.date_created.desc())
                      .offset(offset).limit(limit)
                      .all())
         return columns, 200, [('Total-Count', str(count))]
