# sub/panel/api/replies.py
@@ -14,19 +14,14 @@ class Replies(Resource):
 
     # @register_permission('get_posts')
     def get(self):
-        filter_fields = ['id', 'is_hidden', 'column_id', 'post_id', 'is_sticky'
-                         'status', 'account_id', 'review_status']
+        filter_fields = ['id', 'is_hidden', 'column_id', 'post_id',
+                         'is_sticky', 'account_id', 'review_status']
         query = get_slave_query(Reply, filter_fields, g.args)
-        order_by = g.args.get('order_by', 'date_created')
         count = query.count()
 
         offset, limit = get_offset_limit(g.args)
-        order_dict = {
-            'date_created': Reply.date_created.desc(),
-        }
-        order_by = order_dict.get(order_by)
         replys = (query
-                     .order_by(order_by)
+                     .order_by(Reply.date_created.desc())
                      .offset(offset).limit(limit)
                      .all())
         return replys, 200, [('Total-Count', str(count))]
